--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-lazy-load-image-component": "^1.5.0",
+    "react-modal": "^3.11.2",
+    "react-scripts": "3.4.3",
+    "react-use": "^15.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
